@@ -42,8 +42,8 @@ library(PureCN)
 
 \section{Limitations}
 
-\Biocpkg{PureCN} currently assumes a completely diploid normal genome. It tries to
-detect the sex of samples by calculating the coverage ratio of chromosomes X
+\Biocpkg{PureCN} currently assumes a completely diploid normal genome. For human samples, 
+it tries to detect the sex of samples by calculating the coverage ratio of chromosomes X
 and Y and will then remove any non-diploid chromosomes (i.e. XY for males and Y
 for females)\footnote{Loss of Y chromosome (LOY) can result in wrong female
 calls, especially in high purity samples or if LOY is in both tumor and
@@ -53,7 +53,9 @@ The software throws a warning in this case when germline SNPs are
 provided.`}. Non-diploid chromosomes provide only limited information for
 purity and ploidy selection, but are of interest for copy number calling.
 Future versions might support full copy number calling on the XY
-chromosomes. 
+chromosomes. For non-human samples, the user needs to manually remove all 
+non-diploid chromosomes from the coverage data and specify 
+\Rcode{sex='diploid'} in the \Biocpkg{PureCN} call.
 
 \Biocpkg{PureCN} currently also assumes a mostly mono-clonal genome. For most
 clinical samples, this is reasonable, but very heterogenous samples are likely
@@ -722,12 +724,12 @@ Figure~\ref{figure/figureexample2-1}:
 \paragraph{If you have trouble generating input data PureCN accepts, please check:}
 
 \begin{itemize}
-    \item For problem related to generating valid coverage data, either consult
+    \item For problems related to generating valid coverage data, either consult
     the \software{GATK} manual for the \software{DepthOfCoverage} tool or
     Section~\ref{purecncoverage} for the equivalent function in
     \Biocpkg{PureCN}.
-    \item Currently only VCF files generated by \software{MuTect 1} are
-supported. A minimal example \software{MuTect} call would be:
+    \item Currently only VCF files generated by \software{MuTect 1} are officially
+supported and well tested. A minimal example \software{MuTect} call would be:
     \begin{verbatim}
     $JAVA -Xmx6g -jar $MUTECT \
     --analysis_type MuTect -R ${REFERENCE} \
@@ -742,7 +744,9 @@ supported. A minimal example \software{MuTect} call would be:
 provided in addition to the required VCF file via
 \Rcode{args.filterVcf=list(stats.file='Sample1\_bwa\_mutect\_stats.txt')} in
 \Rfunction{runAbsoluteCN}. If provided, it may help \Biocpkg{PureCN} filter
-artifacts. If you think your VCF file format should be supported, please
+artifacts. 
+
+If you think your VCF file format should be supported out-of-the-box, please
 contact us.
 
 \end{itemize}
